--- a/src/styles/vars/_base.scss
+++ b/src/styles/vars/_base.scss
@@ -1,2 +1,19 @@
 $title-size: 40rpx;
 $title-color: #bd34fe;
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
+}
+:root {
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+}
