--- a/src/styles/vars/_base.scss
+++ b/src/styles/vars/_base.scss
@@ -1,2 +1,13 @@
 $title-size: 40rpx;
 $title-color: #bd34fe;
+
+@mixin domSize($width,$height){
+  width: $width;
+  height: $height;
+}
+
+@mixin flexCenter(){
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
